tests/invalid/method_impl.err_exp
method_impl.m:026: In clause for type class method implementation:
method_impl.m:026:   in argument 2 of predicate `method_impl.foo_m1'/2:
method_impl.m:026:   type error: [38;5;87mvariable `HeadVar__2'[39;49m has type
method_impl.m:026:     [38;5;203mint;[39;49m
method_impl.m:026:   expected type was
method_impl.m:026:     [38;5;40mstring.[39;49m
method_impl.m:026:   The partial type assignment was:
method_impl.m:026:     HeadVar__1_1: method_impl.foo
method_impl.m:026:     HeadVar__2_2: int
method_impl.m:029: In clause for type class method implementation:
method_impl.m:029:   error: undefined predicate `bar_m1'/2.
